#
#      Makefile.am for lib/tiff
#


@SET_MAKE@

SHELL = /bin/sh

include $(top_srcdir)/Makefile.def

#
#   Makefile definitions
#

noinst_LTLIBRARIES = libxitetiff.la

MANF =  biff2tiff1.3 biff2tiff8.3 biff2tiff8p.3 biff2tiff8c.3 \
	biff2tiff8s.3 biff2tiff8sc.3 biff2tiff16.3 biff2tiff16c.3 \
	biff2tiff16s.3 biff2tiff16sc.3 biff2tiff32i.3 biff2tiff32ic.3 \
	biff2tiff32fp.3 biff2tiff32fpc.3 biff2tiff64.3 biff2tiff64c.3 \
	biff2tiff.3 tiff2biff1.3 tiff2biff1p.3 tiff2biff2.3 \
	tiff2biff2p.3 tiff2biff4.3 tiff2biff4p.3 tiff2biff8.3 \
	tiff2biff8p.3 tiff2biff8c.3 tiff2biff16.3 tiff2biff16c.3 \
	tiff2biff32i.3 tiff2biff32ic.3 tiff2biff32fp.3 tiff2biff32fpc.3 \
	tiff2biff64.3 tiff2biff64c.3 tiff2biff.3

man3_MANS=$(MANF)

libxitetiff_la_SOURCES = biff2tiff.c tiff2biff.c

biff2tiff1.3:	biff2tiff.3
biff2tiff8.3:	biff2tiff.3
biff2tiff8p.3:	biff2tiff.3
biff2tiff8c.3:	biff2tiff.3
biff2tiff8s.3:	biff2tiff.3
biff2tiff8sc.3:	biff2tiff.3
biff2tiff16.3:	biff2tiff.3
biff2tiff16c.3:	biff2tiff.3
biff2tiff16s.3:	biff2tiff.3
biff2tiff16sc.3:	biff2tiff.3
biff2tiff32i.3:	biff2tiff.3
biff2tiff32ic.3:	biff2tiff.3
biff2tiff32fp.3:	biff2tiff.3
biff2tiff32fpc.3:	biff2tiff.3
biff2tiff64.3:	biff2tiff.3
biff2tiff64c.3:	biff2tiff.3

tiff2biff1.3:	tiff2biff.3
tiff2biff1p.3:	tiff2biff.3
tiff2biff2.3:	tiff2biff.3
tiff2biff2p.3:	tiff2biff.3
tiff2biff4.3:	tiff2biff.3
tiff2biff4p.3:	tiff2biff.3
tiff2biff8.3:	tiff2biff.3
tiff2biff8p.3:	tiff2biff.3
tiff2biff8c.3:	tiff2biff.3
tiff2biff16.3:	tiff2biff.3
tiff2biff16c.3:	tiff2biff.3
tiff2biff32i.3:	tiff2biff.3
tiff2biff32ic.3:	tiff2biff.3
tiff2biff32fp.3:	tiff2biff.3
tiff2biff32fpc.3:	tiff2biff.3
tiff2biff64.3:	tiff2biff.3
tiff2biff64c.3:	tiff2biff.3
