lib_LTLIBRARIES = libxite.la libxiteX.la
libxite_la_SOURCES =
libxite_la_LIBADD = \
	arithmetic/libxitearithmetic.la \
	biff/libxitebiff.la \
	binarize/libxitebinarize.la \
	canny/libxitecanny.la \
	cdoc/libxitecdoc.la \
	classification/libxiteclassification.la \
	color/libxitecolor.la \
	combine/libxitecombine.la \
	contour/libxitecontour.la \
	convert/libxiteconvert.la \
	convolve/libxiteconvolve.la \
	copy/libxitecopy.la \
	dither/libxitedither.la \
	draw/libxitedraw.la \
	extrema/libxiteextrema.la \
	fft/libxitefft.la \
	fht/libxitefht.la \
	fractal/libxitefractal.la \
	geometry/libxitegeometry.la \
	gradInv/libxitegradInv.la \
	histo/libxitehisto.la \
	hough/libxitehough.la \
	haar/libxitehaar.la \
	ideal/libxiteideal.la \
	ihs/libxiteihs.la \

libxiteX_la_SOURCES =
libxiteX_la_LIBADD = \
	Image/libxiteXImage.la \

SUBDIRS = \
	arithmetic \
	biff \
	binarize \
	canny \
	cdoc \
	classification \
	color \
	combine \
	contour \
	convert \
	convolve \
	copy \
	dither \
	draw \
	extrema \
	fft \
	fht \
	fractal \
	fwf \
	geometry \
	gradInv \
	histo \
	hough \
	haar \
	ideal \
	ihs \
	Image \

tt = \
	kncn \
	knn \
	matlab \
	median \
	minmax \
	morph \
	negate \
	noise \
	pnm \
	PostScript \
	principal \
	pyramid \
	region \
	resample \
	scatter \
	scripts \
	segmentation \
	sigma \
	snn \
	statistics \
	stdiff \
	sunraster \
	texture \
	thin \
	threshold \
	thresMl \
	tiff \
	utils \
	ximage \
	xpm \
	xshow \
	zernike
